[gd_scene load_steps=10 format=3 uid="uid://dl3ia7dmya7fp"]

[ext_resource type="Theme" uid="uid://dl1181xufyebq" path="res://Theme/Theme.tres" id="1"]
[ext_resource type="Script" uid="uid://xs7yjyq4tbwp" path="res://Settings.gd" id="2"]
[ext_resource type="Theme" uid="uid://f0mobaom23an" path="res://Theme/Theme_Large_Font.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://b5w1afldacdb1" path="res://CustomButton.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://c7cyuxpxnvyx6" path="res://Art/arrow_decorative_w.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dylj8y3o8m4fx" path="res://Art/arrow_decorative_e.png" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_070lc"]
bg_color = Color(0.3234, 0.3234, 0.33, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhcno"]
bg_color = Color(0.360784, 0.619608, 0.423529, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oddr5"]
bg_color = Color(0.921569, 0.921569, 0.882353, 1)
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Settings" type="VBoxContainer"]
theme = ExtResource("1")
theme_override_constants/separation = 10
script = ExtResource("2")

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.3234, 0.3234, 0.33, 1)
text = "SETTINGS"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 2

[node name="Dark Mode" type="Label" parent="GridContainer"]
layout_mode = 2
text = "DARK_MODE"

[node name="CenterContainer2" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Dark Mode CheckButton" type="CheckBox" parent="GridContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Run Timer Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "RUN_TIMER"

[node name="CenterContainer8" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Run Timer Checkbutton" type="CheckBox" parent="GridContainer/CenterContainer8"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sound Effects" type="Label" parent="GridContainer"]
layout_mode = 2
text = "MAIN VOLUME"

[node name="Main Volume" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="Effects" type="Label" parent="GridContainer"]
layout_mode = 2
text = "EFFECT_VOLUME"

[node name="Effect Volume Slider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_070lc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hhcno")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oddr5")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Music" type="Label" parent="GridContainer"]
layout_mode = 2
text = "MUSIC VOLUME"

[node name="Music Volume" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_070lc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hhcno")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oddr5")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Shuffle Music Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SHUFFLE_MUSIC"

[node name="CenterContainer5" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Shuffle Music CheckButton" type="CheckBox" parent="GridContainer/CenterContainer5"]
layout_mode = 2

[node name="Language" type="Label" parent="GridContainer"]
layout_mode = 2
text = "LANGUAGE"

[node name="Language Dropdown" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Screen Mode" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SCREEN MODE"

[node name="Screen Mode Dropdown" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FPS" type="Label" parent="GridContainer"]
layout_mode = 2
text = "FPS LIMIT"

[node name="FPS Dropdown" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="V Sync" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V SYNC"

[node name="CenterContainer" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="V Sync Enabled" type="CheckBox" parent="GridContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Text Size" type="Label" parent="GridContainer/HBoxContainer"]
layout_mode = 2
text = "TEXT_SIZE"

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Text Smaller" parent="GridContainer/HBoxContainer2" instance=ExtResource("4")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_neighbor_right = NodePath("../Text Larger")
text = ""
icon = ExtResource("5")
expand_icon = true

[node name="Text Size Label" type="Label" parent="GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100%"
horizontal_alignment = 1

[node name="Text Larger" parent="GridContainer/HBoxContainer2" instance=ExtResource("4")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_neighbor_left = NodePath("../Text Smaller")
text = ""
icon = ExtResource("6")
expand_icon = true

[node name="Ctrl Sens" type="Label" parent="GridContainer"]
layout_mode = 2
text = "CONTROLLER_SENSETIVITY"

[node name="HBoxContainer3" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Sens Down" parent="GridContainer/HBoxContainer3" instance=ExtResource("4")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_neighbor_right = NodePath("../Sens Up")
text = ""
icon = ExtResource("5")
expand_icon = true

[node name="Contr Sens Label" type="Label" parent="GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100%"
horizontal_alignment = 1

[node name="Sens Up" parent="GridContainer/HBoxContainer3" instance=ExtResource("4")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_neighbor_left = NodePath("../Sens Down")
text = ""
icon = ExtResource("6")
expand_icon = true

[node name="Money Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "MONEY_TEXT"

[node name="CenterContainer4" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Monet Text CheckButton" type="CheckBox" parent="GridContainer/CenterContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="Damage Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "DAMAGE_TEXT"

[node name="CenterContainer3" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Damage Text CheckButton" type="CheckBox" parent="GridContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Screen Shake Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SCREEN_SHAKE"

[node name="CenterContainer6" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Screen Shake CheckButton" type="CheckBox" parent="GridContainer/CenterContainer6"]
unique_name_in_owner = true
layout_mode = 2

[node name="Black Hole Pulse Text" type="Label" parent="GridContainer"]
layout_mode = 2
text = "BLACK_HOLE_PULSE"

[node name="CenterContainer7" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Black Hole CheckButton" type="CheckBox" parent="GridContainer/CenterContainer7"]
unique_name_in_owner = true
layout_mode = 2

[node name="Black Hole Particles" type="Label" parent="GridContainer"]
layout_mode = 2
text = "BLACK_HOLE_PARTICLES"

[node name="CenterContainer10" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="Black Hole Particles CheckButton" type="CheckBox" parent="GridContainer/CenterContainer10"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="GridContainer/CenterContainer2/Dark Mode CheckButton" to="." method="_on_dark_mode_check_button_toggled"]
[connection signal="toggled" from="GridContainer/CenterContainer8/Run Timer Checkbutton" to="." method="_on_run_timer_checkbutton_toggled"]
[connection signal="value_changed" from="GridContainer/Main Volume" to="." method="_on_main_volume_value_changed"]
[connection signal="value_changed" from="GridContainer/Effect Volume Slider" to="." method="_on_effect_volume_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/Music Volume" to="." method="_on_music_volume_value_changed"]
[connection signal="toggled" from="GridContainer/CenterContainer5/Shuffle Music CheckButton" to="." method="_on_shuffle_music_check_button_toggled"]
[connection signal="item_selected" from="GridContainer/Language Dropdown" to="." method="_on_language_dropdown_item_selected"]
[connection signal="item_selected" from="GridContainer/Screen Mode Dropdown" to="." method="_on_screen_mode_dropdown_item_selected"]
[connection signal="item_selected" from="GridContainer/FPS Dropdown" to="." method="_on_fps_dropdown_item_selected"]
[connection signal="toggled" from="GridContainer/CenterContainer/V Sync Enabled" to="." method="_on_v_sync_enabled_toggled"]
[connection signal="pressed" from="GridContainer/HBoxContainer2/Text Smaller" to="." method="_on_text_smaller_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer2/Text Larger" to="." method="_on_text_larger_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer3/Sens Down" to="." method="_on_sens_down_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer3/Sens Up" to="." method="_on_sens_up_pressed"]
[connection signal="toggled" from="GridContainer/CenterContainer4/Monet Text CheckButton" to="." method="_on_monet_text_check_button_toggled"]
[connection signal="toggled" from="GridContainer/CenterContainer3/Damage Text CheckButton" to="." method="_on_damage_text_check_button_toggled"]
[connection signal="toggled" from="GridContainer/CenterContainer6/Screen Shake CheckButton" to="." method="_on_screen_shake_check_button_toggled"]
[connection signal="toggled" from="GridContainer/CenterContainer7/Black Hole CheckButton" to="." method="_on_black_hole_check_button_toggled"]
[connection signal="toggled" from="GridContainer/CenterContainer10/Black Hole Particles CheckButton" to="." method="_on_black_hole_particles_check_button_toggled"]
